<resources>
    <string name="app_name">Registration_page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="server_problem">Response</string>
    <string name="Rs">₹</string>
   <string name="Select_the_compaint">Select_the_compaint</string>
    <string name="Privacy_Policy"><b><font color="#000000">(a)</font></b> Soliteck recognizes the expectations of its customers with regard to privacy, confidentiality and security of their personal information that resides with Soliteck.\n
    <b><font color="#000000">(b)</font></b> This Privacy Policy provides you with details about the manner in which your data is collected, stored &amp; used by us. You are advised to read this Privacy Policy carefully.\n
    <b><font color="#000000">(c)</font></b> By visiting Soliteck website/WAP site/applications you expressly give us consent to use &amp; disclose your personal information in accordance with this Privacy Policy. If you do not agree to the terms of the policy, please do not use or access Soliteck website, WAP site or mobile applications.\n
    <b><font color="#000000">(d)</font></b> Note: Our privacy policy may change at any time without prior notification. To make sure that you are aware of any changes, kindly review the policy periodically. This Privacy Policy shall apply uniformly to Soliteck desktop website, Soliteck mobile WAP site &amp; Soliteck mobile applications</string>
    <string name="General"> <b><font color="#000000">(a)</font></b> We will not sell, share or rent your personal information to any 3rd party or use your email address/mobile number for unsolicited emails and/or SMS.\n
        <b><font color="#000000">(b) </font></b>Any emails and/or SMS sent by Soliteck will only be in connection with the provision of agreed services &amp; products and this Privacy Policy.\n
        <b><font color="#000000">(c) </font></b>Periodically, we may reveal general statistical information about Soliteck &amp; its users, such as number of visitors, number and type of goods and services purchased, etc.\n
        <b><font color="#000000">(d)</font></b> We reserve the right to communicate your personal information to any third party that makes a legally-compliant request for its disclosure. </string>
    <string name="Personal_Information"> <b><font color="#000000">(a)</font></b> Personal Information means and includes all information that can be linked to a specific individual or to identify any individual, such as name, address, mailing address, telephone number, email ID, credit card number, cardholder name, card expiration date, information about your mobile phone, DTH service, data card, electricity connection, Smart Tags and any details that may have been voluntarily provide by the user in connection with availing any of the services on Soliteck When you browse through Soliteck, we may collect information regarding the domain and host from which you access the internet, the Internet Protocol [IP] address of the computer or Internet service provider [ISP] you are using, and anonymous site statistical data. </string>
    <string name="Cookies"> <b><font color="#000000">(a)</font></b> A "cookie" is a small piece of information stored by a web server on a web browser so it can be later read back from that browser. Soliteck uses cookie and tracking technology depending on the features offered.\n
            <b><font color="#000000"> (b)</font></b> No personal information will be collected via cookies and other tracking technology; however, if you previously provided personally identifiable information, cookies may be tied to such information. Aggregate cookie and tracking information may be shared with third parties. </string>
    <string name="links_Other_Sites"> <b><font color="#000000">(a)</font></b> Our site links to other websites that may collect personally identifiable information about you. Soliteck is not responsible for the privacy practices or the content of those linked websites. </string>
    <string name="Security"> <b><font color="#000000">(a)</font></b> Soliteck has stringent security measures in place to protect the loss, misuse, and alteration of the information under our control.\n
        <b><font color="#000000">(b)</font></b> Whenever you change or access your account information, we offer the use of a secure server. Once your information is in our possession we adhere to strict security guidelines, protecting it against unauthorized access.</string>
    <string name="Consent"> <b><font color="#000000">(a)</font></b> By using Soliteck and/or by providing your information, you consent to the collection and use of the information you disclose on Soliteck in accordance with this Privacy Policy, including but not limited to your consent for sharing your information as per this privacy policy. </string>
    <string name="Communication"> <b><font color="#000000">(a)</font></b> For any kind of communication, please write to support@Soliteck.comSoliteck is headquartered at:Mumbai</string>
    <string name="checkbox"> As the authorized representative,Hereby confirm that I have accepted and agreed to abide by all the terms and conditions outlined in the Privacy Policy. I understand that any failure to comply with the terms or any breach of the agreement may result in legal action being taken against me, effective as of </string>
    <string name="agreement1">  THIS AGREEMENT IS AN ELECTRONIC RECORD IN TERMS OF INFORMATION TECHNOLOGY ACT, 200 AND RULES THERE UNDER AS APPLICABLE AND THE AMENDED PROVISIONS PERTAINING TO ELECTRONIC RECORDS/DOCUMENTS IN VARIOUS STATUTES AS AMENDED BY THE INFORMATION TECHNOLOGY ACT, 2000. THIS IS A COMPUTER GENERATED ELECTRONIC RECORD AND DOES NOT REQUIRE ANY PHYSICAL OR DIGITAL SIGNATURES.   </string>
    <string name="agreement2nd">  PLEASE READ THE TERMS AND CONDITIONS OF THIS AGREEMENT CAREFULLY. TERMS AND CONDITIONS MENTIONED IN THE AGREEMENT ARE A BINDING CONTRACT BETWEEN SOLITECK Private Limited. (COMPANY or SOLITECK),REFERRED HEREIN BELOW AND YOU   </string>
    <string name="agreement3rd"> THE TERMS ARE EFFECTIVE UPON ACCEPTANCE AND WILL GOVERN THE RELATIONSHIP BETWEEN YOU</string>
    <string name="aggrement3rdnew">This Agreement is entered into on this Date</string>
    <string name="aggrement4">  between Soliteck Dgisolutions pvt ltd. a company incorporated under the Companies Act, 1956 and having its Registered Office at Office No. 101 Row house, Plot- 211, Sector-5, Ghansoli, Navi Mumbai Maharashtra - 400 701 (hereinafter referred to as “SoliTeck” , which expression shall, unless it be repugnant to the subject or context thereof, mean and include its successors and assigns) of the ONE PART</string>
    <string name="aggrement5"> a company having its Registered Office at (hereinafter </string>
    <string name="aggrement6">referred to as “the Entity” which</string>
    <string name="aggrement7">expression shall, unless it be</string>
    <string name="aggrement8"> repugnant to the subject or context thereof, mean and include its successors, affiliates and assigns) of the OTHER PART The Entity and SOLITECK are hereinafter collectively referred to as ‘Party’ or ‘Parties’ as per the context.</string>
    <string name="aggrement9"><b><font color="#000000"> WHEREAS </font></b></string>
    <string name="aggrement10"><b><font color="#000000">(i)</font></b> SoliTeck is engaged, inter alia, in the business of enabling electronic payment transactions and payment services and has business arrangements with various mobile operators, payment aggregators, billing companies, Banks and other entities for managing various electronic payments and transaction services;</string>
    <string name="aggrement11"><b><font color="#000000">(ii)</font></b>  The Entity has a pan India network of retail outlets in multiple formats from where customers can access various facilities offered by SOLITECK directly through the Entity;</string>
    <string name="aggrement12"><b><font color="#000000">(iii)</font></b>  The Entity is now proposing to offer Top Up or cell phone refill , DMT services , AEPS services and BBPS services that will enable people to receive the services at the Entity’s Terminals located at the retail outlets as also directly through the Entity and in that context is desirous of tie-ing up with SOLITECK who has in turn tied up with bank &amp; Service Providers.\n <b><font color="#000000">(iv) </font></b>SOLITECK has agreed to the tie up with the Entity, upon the terms and conditions hereinafter appearing.</string>
    <string name="aggrement13"> The parties wish to set up a strategic business alliance and this is likely to involve them disclosing confidential information to each other.\n <b><font color="#000000">1. DEFINITIONS </font></b> \nIn this Agreement the following expressions have the meaning set opposite: \n <b><font color="#000000">this Agreement: </font></b> this document, as amended from time to time in accordance with clause; \n  <b><font color="#000000">A Business Day: </font></b> Monday to Saturday (inclusive) except bank or national holidays in India;\n<b><font color="#000000">Confidential Information: </font></b>each party's confidential information including any Intellectual Property and Know-how disclosed by that party to the other for the Specified Purpose and identified as confidential before or at the time of disclosure;\n <b><font color="#000000">A Group Company: </font></b>any undertaking which is, on or after the date of this Agreement from time to time, a subsidiary undertaking of the Company, a parent undertaking of the Company or a subsidiary undertaking of a parent undertaking of the Company, as those terms are defined in section 258 of the Companies Act 1985; \n <b><font color="#000000">Intellectual Property:</font></b>patents, trade marks, service marks, registered designs, copyrights, database rights, design rights, confidential information, applications for any of the above, and any similar right recognized from time to time in any jurisdiction, together with all rights of action in relation to the infringement of any of the above;\n<b><font color="#000000">THE COMPANY </font></b> SOLITECK is a service provider company engage in the business of Prepaid/Postpaid recharge, DMT service, AEPS, BBPS, and has acquired vast knowledge, experience and expertise therein. And, has a good number of reputed clients and qualified staff with a good location.\nNow it is hereby agreed by and between the parties hereto as follows:</string>
    <string name="aggrement14"><b><font color="#000000">(a)</font></b>SOLITECK appoints the CHANNEL PARTNER for its promotion, marketing and/or selling on a non-exclusive basis for the promotion, marketing, sales and/or Distribution of the said products developed, promoted, marketed, sold, distributed through SMS or Web under its respective brand names.\n<b><font color="#000000">(b)</font></b> Not with standing anything to the contrary herein contained, SOLITECK shall deemed to be entitled from time as it may consider necessary desirable or expedient to promote and market the sale of the said products in the said territory and in particular, to appoint or engage from time to time any other persons, firms, companies or bodies corporate as its CHANNEL PARTNERs and/or representatives in such territory for the promotion, marketing, sale and distribution of the said products in the said territory.">expression shall, unless it be</string>
</resources>